# genes-X-sim

./: .gitignore  CMakeLists.txt  README.md  main.cu  main1.cpp  main2.cpp  main3.cpp  utils1.h  utils2.h  utils3.h
